--- a/Superscribe/Superscribe.csproj
+++ b/Superscribe/Superscribe.csproj
@@ -49,7 +49,8 @@
     <Compile Include="Models\ControllerState.cs" />
     <Compile Include="Models\CommandState.cs" />
     <Compile Include="Models\ParamState.cs" />
-    <Compile Include="Models\WebApiInfo.cs" />
+    <Compile Include="Models\SuperscribeState.cs" />
+    <Compile Include="Models\RouteData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SuperList.cs" />
     <Compile Include="Utils\Extensions.cs" />
