--- a/Superscribe/Superscribe.csproj
+++ b/Superscribe/Superscribe.csproj
@@ -52,8 +52,8 @@
     <Compile Include="Models\SuperscribeState.cs" />
     <Compile Include="Models\RouteData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SuperList.cs" />
-    <Compile Include="Utils\Extensions.cs" />
+    <Compile Include="Utils\SuperList.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="WebAPI\Internals\ActionSelectorCacheItem.cs" />
     <Compile Include="WebAPI\Internals\Extensions.cs" />
     <Compile Include="ʃ.cs" />
