--- a/Superscribe.WebAPI/Superscribe.WebAPI.csproj
+++ b/Superscribe.WebAPI/Superscribe.WebAPI.csproj
@@ -32,10 +32,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Web.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -47,6 +45,12 @@
     <Compile Include="SuperscribeActionSelector.cs" />
     <Compile Include="SuperscribeConfig.cs" />
     <Compile Include="SuperscribeControllerSelector.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Superscribe\Superscribe.csproj">
+      <Project>{0882D762-CA4D-48A5-956E-2121DECE000E}</Project>
+      <Name>Superscribe</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
