--- a/Superscribe.Testing/Superscribe.Testing.csproj
+++ b/Superscribe.Testing/Superscribe.Testing.csproj
@@ -50,9 +50,9 @@
     <Compile Include="SuperscribeTestConfig.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Superscribe.WebAPI\Superscribe.WebAPI.csproj">
+    <ProjectReference Include="..\Superscribe.WebAPI\Superscribe.WebApi.csproj">
       <Project>{4589FE86-FF6A-4A97-ACB9-5E4D5F813A04}</Project>
-      <Name>Superscribe.WebAPI</Name>
+      <Name>Superscribe.WebApi</Name>
     </ProjectReference>
     <ProjectReference Include="..\Superscribe\Superscribe.csproj">
       <Project>{0882d762-ca4d-48a5-956e-2121dece000e}</Project>
