--- a/Superscribe.WebAPI/Superscribe.WebAPI.csproj
+++ b/Superscribe.WebAPI/Superscribe.WebAPI.csproj
@@ -41,8 +41,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Internals\ActionSelectorCacheItem.cs" />
-    <Compile Include="Internals\Extensions.cs" />
     <Compile Include="Internals\HttpControllerTypeCache.cs" />
+    <Compile Include="Internals\HttpParameterBindingExtensions.cs" />
+    <Compile Include="Internals\HttpResponseMessageExtensions.cs" />
+    <Compile Include="Internals\TaskHelpers.cs" />
+    <Compile Include="Internals\TaskHelpersExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SuperscribeActionInvoker.cs" />
     <Compile Include="SuperscribeActionSelector.cs" />
