Added shorthand states to provide slightly more concise syntax using strings and explicit casts

--- a/Superscribe/Superscribe.csproj
+++ b/Superscribe/Superscribe.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Models\ControllerState.cs" />
     <Compile Include="Models\CommandState.cs" />
     <Compile Include="Models\ParamState.cs" />
+    <Compile Include="Models\ShorthandStates.cs" />
     <Compile Include="Models\SuperscribeState.cs" />
     <Compile Include="Models\RouteData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
