--- a/Superscribe.Demo.Neural/Superscribe.Demo.Neural.csproj
+++ b/Superscribe.Demo.Neural/Superscribe.Demo.Neural.csproj
@@ -78,11 +78,22 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NeuralNetwork\HiddenNeuron.cs" />
+    <Compile Include="NeuralNetwork\INeuralNode.cs" />
+    <Compile Include="NeuralNetwork\InputNeuron.cs" />
+    <Compile Include="NeuralNetwork\LinkWeight.cs" />
+    <Compile Include="NeuralNetwork\Network.cs" />
+    <Compile Include="NeuralNetwork\Neuron.cs" />
+    <Compile Include="NeuralNetwork\NeuronBase.cs" />
+    <Compile Include="NeuralNetwork\OutputNeuron.cs" />
+    <Compile Include="NeuralNetwork\RandomGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <None Include="Properties\PublishProfiles\superscribe-neural - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\superscribe-neural - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
