--- a/Superscribe/Superscribe.csproj
+++ b/Superscribe/Superscribe.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Models\SuperscribeNode.cs" />
     <Compile Include="Models\RouteData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SuperscribeModule.cs" />
     <Compile Include="Utils\SuperList.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="ʃ.cs" />
