Routes should now (vaguely inteligently) combine themselves together if segments match

--- a/Superscribe.Testing/Superscribe.Testing.csproj
+++ b/Superscribe.Testing/Superscribe.Testing.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Controllers\PortfolioTagsController.cs" />
     <Compile Include="Controllers\PortfolioProjectMediaController.cs" />
     <Compile Include="BenchmarkConfig.cs" />
+    <Compile Include="CombinationConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RouteConfig.cs" />
     <Compile Include="SuperscribeTestConfig.cs" />
