--- a/Superscribe.Tests.WebApi/Superscribe.Tests.WebApi.csproj
+++ b/Superscribe.Tests.WebApi/Superscribe.Tests.WebApi.csproj
@@ -78,6 +78,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="RouteCombiningTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test.cs" />
   </ItemGroup>
