--- a/Superscribe.WebAPI/Superscribe.WebAPI.csproj
+++ b/Superscribe.WebAPI/Superscribe.WebAPI.csproj
@@ -33,6 +33,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
