--- a/Superscribe/Superscribe.csproj
+++ b/Superscribe/Superscribe.csproj
@@ -41,9 +41,12 @@
     <Compile Include="Models\ConstantNode.cs" />
     <Compile Include="Models\ControllerNode.cs" />
     <Compile Include="Models\CommandNode.cs" />
+    <Compile Include="Models\FinalFunction.cs" />
+    <Compile Include="Models\FinalFunctionList.cs" />
     <Compile Include="Models\MethodShorthands.cs" />
     <Compile Include="Models\NodeFuture.cs" />
     <Compile Include="Models\ParamNode.cs" />
+    <Compile Include="Models\RouteGlue.cs" />
     <Compile Include="Models\ShorthandStates.cs" />
     <Compile Include="Models\SuperscribeNode.cs" />
     <Compile Include="Models\RouteData.cs" />
