--- a/Superscribe.Demo.WebApiModules/packages.config
+++ b/Superscribe.Demo.WebApiModules/packages.config
@@ -27,6 +27,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
+  <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
+  <package id="WebActivator" version="1.5.3" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
