--- a/Superscribe.Demo.Owin/Web.config
+++ b/Superscribe.Demo.Owin/Web.config
@@ -6,9 +6,12 @@
   -->
 
 <configuration>
-    <system.web>
-      <compilation debug="true" targetFramework="4.5" />
-      <httpRuntime targetFramework="4.5" />
-    </system.web>
-
+  <system.web>
+    <compilation debug="true" targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" />
+  </system.web>
+  <appSettings>
+    <add key="owin:HandleAllRequests" value="true" />
+    <add key="owin:SetCurrentDirectory" value="true" />
+  </appSettings>
 </configuration>
