--- a/Superscribe.Owin/Superscribe.Owin.csproj
+++ b/Superscribe.Owin/Superscribe.Owin.csproj
@@ -45,9 +45,12 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConnegHelpers.cs" />
     <Compile Include="OwinRouteData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StartupExtensions.cs" />
+    <Compile Include="SuperscribeOwinConfig.cs" />
+    <Compile Include="SuperscribeOwinModule.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Superscribe\Superscribe.csproj">
