--- a/Superscribe.Demo.Owin/Superscribe.Demo.Owin.csproj
+++ b/Superscribe.Demo.Owin/Superscribe.Demo.Owin.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HelloWorldModule.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
