--- a/Superscribe.Owin/Superscribe.Owin.csproj
+++ b/Superscribe.Owin/Superscribe.Owin.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnegHelpers.cs" />
+    <Compile Include="ContentHandler.cs" />
     <Compile Include="OwinRouteData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StartupExtensions.cs" />
