--- a/Samples/Superscribe.Samples.FluentApi/Superscribe.Samples.FluentApi.csproj
+++ b/Samples/Superscribe.Samples.FluentApi/Superscribe.Samples.FluentApi.csproj
@@ -40,6 +40,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Owin">
       <HintPath>..\..\packages\Microsoft.Owin.2.0.1\lib\net45\Microsoft.Owin.dll</HintPath>
     </Reference>
