Moved api specific RouteData out of superscribe core, and renamed it to WebApiRouteData

--- a/Samples/Superscribe.UnitTesting/Superscribe.UnitTesting.csproj
+++ b/Samples/Superscribe.UnitTesting/Superscribe.UnitTesting.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="SuperscribeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RouteData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Superscribe\Superscribe.csproj">
