--- a/Superscribe.Tests.Unit/Superscribe.Tests.Unit.csproj
+++ b/Superscribe.Tests.Unit/Superscribe.Tests.Unit.csproj
@@ -63,6 +63,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Superscribe.Testing\Superscribe.Testing.csproj">
+      <Project>{48D44F6B-7745-4517-B95A-AFAA86AAF835}</Project>
+      <Name>Superscribe.Testing</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Superscribe\Superscribe.csproj">
       <Project>{0882D762-CA4D-48A5-956E-2121DECE000E}</Project>
       <Name>Superscribe</Name>
