--- a/Superscribe.WebAPI2/Superscribe.WebAPI2.csproj
+++ b/Superscribe.WebAPI2/Superscribe.WebAPI2.csproj
@@ -70,6 +70,7 @@
     <Compile Include="SuperscribeActionSelector.cs" />
     <Compile Include="SuperscribeConfig.cs" />
     <Compile Include="SuperscribeControllerSelector.cs" />
+    <Compile Include="WebApiRouteData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Superscribe\Superscribe.csproj">
