--- a/Superscribe.Tests.Owin/Superscribe.Tests.Owin.csproj
+++ b/Superscribe.Tests.Owin/Superscribe.Tests.Owin.csproj
@@ -52,6 +52,7 @@
     <Reference Include="Machine.Specifications.Should">
       <HintPath>..\packages\Machine.Specifications.0.5.18-beta07\lib\net40\Machine.Specifications.Should.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Owin">
       <HintPath>..\packages\Microsoft.Owin.2.0.2\lib\net45\Microsoft.Owin.dll</HintPath>
     </Reference>
@@ -86,6 +87,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BranchingTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Tests.cs" />
