--- a/Superscribe.Owin/Superscribe.Owin.csproj
+++ b/Superscribe.Owin/Superscribe.Owin.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
@@ -41,13 +42,16 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RedirectMiddleware.cs" />
     <Compile Include="Extensions\EnvironmentExtensions.cs" />
-    <Compile Include="Models\Middleware.cs" />
-    <Compile Include="Models\MiddlewareNode.cs" />
+    <Compile Include="OwinHandler.cs" />
     <Compile Include="OwinRouter.cs" />
     <Compile Include="ConnegHelpers.cs" />
     <Compile Include="MediaTypeHandler.cs" />
     <Compile Include="OwinRouteData.cs" />
+    <Compile Include="Pipelining\Pipeline.cs" />
+    <Compile Include="Pipelining\OwinNode.cs" />
+    <Compile Include="Pipelining\OwinNodeFuture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StartupExtensions.cs" />
     <Compile Include="SuperscribeOwinConfig.cs" />
