--- a/Superscribe.Tests.Owin/Superscribe.Tests.Owin.csproj
+++ b/Superscribe.Tests.Owin/Superscribe.Tests.Owin.csproj
@@ -88,6 +88,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="BranchingTests.cs" />
+    <Compile Include="PipelineTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Tests.cs" />
