--- a/Superscribe.Tests.WebApi/Superscribe.Tests.WebApi.csproj
+++ b/Superscribe.Tests.WebApi/Superscribe.Tests.WebApi.csproj
@@ -78,8 +78,22 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BenchmarkConfig.cs" />
+    <Compile Include="CombinationConfig.cs" />
+    <Compile Include="Controllers\BlogPostArchivesController.cs" />
+    <Compile Include="Controllers\BlogPostMediaController.cs" />
+    <Compile Include="Controllers\BlogPostsController.cs" />
+    <Compile Include="Controllers\BlogTagsController.cs" />
+    <Compile Include="Controllers\FormsController.cs" />
+    <Compile Include="Controllers\PortfolioCategoriesController.cs" />
+    <Compile Include="Controllers\PortfolioProjectMediaController.cs" />
+    <Compile Include="Controllers\PortfolioProjectsController.cs" />
+    <Compile Include="Controllers\PortfolioTagsController.cs" />
     <Compile Include="RouteCombiningTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RouteConfig.cs" />
+    <Compile Include="RouteData.cs" />
+    <Compile Include="SuperscribeTestConfig.cs" />
     <Compile Include="Test.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -87,9 +101,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Superscribe.Testing\Superscribe.Testing.csproj">
-      <Project>{48D44F6B-7745-4517-B95A-AFAA86AAF835}</Project>
-      <Name>Superscribe.Testing</Name>
+    <ProjectReference Include="..\Superscribe.WebAPI\Superscribe.WebApi.csproj">
+      <Project>{4589FE86-FF6A-4A97-ACB9-5E4D5F813A04}</Project>
+      <Name>Superscribe.WebApi</Name>
     </ProjectReference>
     <ProjectReference Include="..\Superscribe\Superscribe.csproj">
       <Project>{0882d762-ca4d-48a5-956e-2121dece000e}</Project>
