--- a/Superscribe.Tests.Owin/packages.config
+++ b/Superscribe.Tests.Owin/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Machine.Fakes" version="1.8.0" targetFramework="net45" />
   <package id="Machine.Fakes.Moq" version="1.8.0" targetFramework="net45" />
-  <package id="Machine.Specifications" version="0.5.18-beta07" targetFramework="net45" />
+  <package id="Machine.Specifications" version="0.5.16" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.0.2" targetFramework="net45" />
   <package id="Microsoft.Owin.Hosting" version="2.0.2" targetFramework="net45" />
   <package id="Microsoft.Owin.Testing" version="2.0.2" targetFramework="net45" />
