--- a/Superscribe.Tests.WebApi/app.config
+++ b/Superscribe.Tests.WebApi/app.config
@@ -10,6 +10,10 @@
         <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1311.615" newVersion="4.1.1311.615" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
