--- a/Superscribe.WebAPI/Superscribe.WebApi2.nuspec
+++ b/Superscribe.WebAPI/Superscribe.WebApi2.nuspec
@@ -9,7 +9,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Superscribe action\controller selectors and module handler for Asp.Net Web API 2</description>
     <dependencies>
-	  <dependency id="Superscribe" version="0.3.0" />	
+	  <dependency id="Superscribe" version="0.3.0-pre" />	
 	  <dependency id="Microsoft.AspNet.WebApi.Core" version="5.0.0" />
       <dependency id="Microsoft.Net.Http" version="2.2.18" />
     </dependencies>
