Fixed an issue with superscribe modules and added a basic test

--- a/Superscribe.Tests.Owin/Superscribe.Tests.Owin.csproj
+++ b/Superscribe.Tests.Owin/Superscribe.Tests.Owin.csproj
@@ -89,6 +89,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ModuleTests.cs" />
     <Compile Include="PipelineTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests.cs" />
