--- a/Superscribe.Tests.Unit/packages.config
+++ b/Superscribe.Tests.Unit/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Moq" version="4.0.10827" targetFramework="net45" />
+  <package id="Machine.Fakes" version="1.8.0" targetFramework="net45" />
+  <package id="Machine.Fakes.Moq" version="1.8.0" targetFramework="net45" />
+  <package id="Machine.Specifications" version="0.5.16" targetFramework="net45" />
+  <package id="Moq" version="4.1.1311.0615" targetFramework="net45" />
 </packages>
