--- a/Superscribe.ScriptCS/packages.config
+++ b/Superscribe.ScriptCS/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Owin" version="2.0.2" targetFramework="net45" />
+  <package id="Microsoft.Owin.Hosting" version="2.0.2" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="Nowin" version="0.11.0.0" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="ScriptCs.Contracts" version="0.9.0" targetFramework="net45" />
 </packages>
