--- a/Superscribe.Owin/Superscribe.Owin.csproj
+++ b/Superscribe.Owin/Superscribe.Owin.csproj
@@ -40,24 +40,32 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
+    <Reference Include="Owin.HttpMessageHandler">
+      <HintPath>..\packages\Owin.HttpMessageHandler.0.6.0.0\lib\portable-net45+win8\Owin.HttpMessageHandler.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
+    <Compile Include="Engine\IOwinRouteEngine.cs" />
+    <Compile Include="Engine\OwinRouteEngine.cs" />
+    <Compile Include="Engine\OwinRouteEngineFactory.cs" />
     <Compile Include="Pipelining\Middleware.cs" />
-    <Compile Include="RedirectMiddleware.cs" />
+    <Compile Include="Components\RedirectMiddleware.cs" />
     <Compile Include="Extensions\EnvironmentExtensions.cs" />
-    <Compile Include="OwinHandler.cs" />
-    <Compile Include="OwinRouter.cs" />
-    <Compile Include="ConnegHelpers.cs" />
+    <Compile Include="Components\OwinHandler.cs" />
+    <Compile Include="Components\OwinRouter.cs" />
+    <Compile Include="Extensions\ConnegHelpers.cs" />
     <Compile Include="MediaTypeHandler.cs" />
     <Compile Include="OwinRouteData.cs" />
     <Compile Include="Pipelining\Pipeline.cs" />
     <Compile Include="Pipelining\OwinNode.cs" />
     <Compile Include="Pipelining\OwinNodeFuture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StartupExtensions.cs" />
-    <Compile Include="SuperscribeOwinConfig.cs" />
+    <Compile Include="Extensions\StartupExtensions.cs" />
+    <Compile Include="SuperscribeOwinOptions.cs" />
     <Compile Include="SuperscribeOwinModule.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -69,6 +77,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
