--- a/Superscribe.Tests.WebApi/Superscribe.Tests.WebApi2.csproj
+++ b/Superscribe.Tests.WebApi/Superscribe.Tests.WebApi2.csproj
@@ -49,9 +49,13 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Web.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="System.Net.Http.Formatting, Version=5.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.0.0\lib\net45\System.Web.Http.dll</HintPath>
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.1.1\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Http, Version=5.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.1.1\lib\net45\System.Web.Http.dll</HintPath>
     </Reference>
     <Reference Include="WebAPI.Testing">
       <HintPath>..\packages\WebAPI.Testing.1.0.0.1\lib\net45\WebAPI.Testing.dll</HintPath>
@@ -84,7 +88,6 @@
     <Compile Include="RouteCombiningTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RouteConfig.cs" />
-    <Compile Include="RouteData.cs" />
     <Compile Include="SuperscribeTestConfig.cs" />
     <Compile Include="Test.cs" />
   </ItemGroup>
