--- a/Superscribe.WebAPI/Superscribe.WebAPI2.csproj
+++ b/Superscribe.WebAPI/Superscribe.WebAPI2.csproj
@@ -42,20 +42,28 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.Formatting, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="System.Net.Http.Formatting, Version=5.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.0.0\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.1.1\lib\net45\System.Net.Http.Formatting.dll</HintPath>
     </Reference>
-    <Reference Include="System.Web.Http, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="System.Web.Http, Version=5.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.0.0\lib\net45\System.Web.Http.dll</HintPath>
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.1.1\lib\net45\System.Web.Http.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
+    <Compile Include="Dependencies\SuperscribeDependencyAdapter.cs" />
+    <Compile Include="Dependencies\SuperscribeDependencyScopeAdapter.cs" />
+    <Compile Include="Engine\IWebApiRouteData.cs" />
+    <Compile Include="Engine\IWebApiRouteDataResolver.cs" />
+    <Compile Include="Engine\WebApiRouteDataAdapter.cs" />
+    <Compile Include="Extensions.cs" />
+    <Compile Include="Models\ActionNode.cs" />
+    <Compile Include="Models\ControllerNode.cs" />
     <Compile Include="Modules\ModuleController.cs" />
     <Compile Include="Modules\ModuleRouteData.cs" />
-    <Compile Include="Modules\SuperscribeModule.cs" />
     <Compile Include="Modules\SuperscribeModuleActionInvoker.cs" />
     <Compile Include="Modules\SuperscribeModuleActionSelector.cs" />
     <Compile Include="Modules\SuperscribeModuleControllerSelector.cs" />
