Modules, Superscribe Routes, Classic Routes and Attribute Routes are now all playing nicely in Web API 2.

--- a/Superscribe.WebAPI/Superscribe.WebAPI.csproj
+++ b/Superscribe.WebAPI/Superscribe.WebAPI.csproj
@@ -76,11 +76,12 @@
     <Compile Include="Internals\TaskHelpers.cs" />
     <Compile Include="Internals\TaskHelpersExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SuperscribeActionInvokerAdapter.cs" />
+    <Compile Include="SuperscribeActionSelectorAdapter.cs" />
+    <Compile Include="SuperscribeControllerSelectorAdapter.cs" />
+    <Compile Include="SuperscribeHandler.cs" />
     <Compile Include="WebApiRouteData.cs" />
-    <Compile Include="SuperscribeActionInvoker.cs" />
-    <Compile Include="SuperscribeActionSelector.cs" />
     <Compile Include="SuperscribeConfig.cs" />
-    <Compile Include="SuperscribeControllerSelector.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Superscribe\Superscribe.csproj">
