--- a/Superscribe.WebAPI/Superscribe.WebAPI2.csproj
+++ b/Superscribe.WebAPI/Superscribe.WebAPI2.csproj
@@ -74,10 +74,11 @@
     <Compile Include="Internals\TaskHelpers.cs" />
     <Compile Include="Internals\TaskHelpersExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SuperscribeActionInvoker.cs" />
-    <Compile Include="SuperscribeActionSelector.cs" />
+    <Compile Include="SuperscribeActionInvokerAdapter.cs" />
+    <Compile Include="SuperscribeActionSelectorAdapter.cs" />
     <Compile Include="SuperscribeConfig.cs" />
-    <Compile Include="SuperscribeControllerSelector.cs" />
+    <Compile Include="SuperscribeControllerSelectorAdapter.cs" />
+    <Compile Include="SuperscribeHandler.cs" />
     <Compile Include="WebApiRouteData.cs" />
   </ItemGroup>
   <ItemGroup>
